test/integration/bad/lang/stanc.expected
  $ ../../../../../install/default/bin/stanc bad1.stan
Syntax error in 'bad1.stan', line 1, column 8 to column 8, parsing error:
   -------------------------------------------------
     1:  model { 
                 ^
   -------------------------------------------------

Variable declaration, statement or "}" expected.
  $ ../../../../../install/default/bin/stanc bad1.stanfunctions
Syntax error in 'bad1.stanfunctions', line 1, column 5 to column 6, parsing error:
   -------------------------------------------------
     1:  int x;
              ^
   -------------------------------------------------

"(" expected after function name.
  $ ../../../../../install/default/bin/stanc bad10.stan
Semantic error in 'bad10.stan', line 2, column 8 to column 11:
   -------------------------------------------------
     1:  data {
     2:     real y__;
                 ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'y__' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc bad11.stan
Semantic error in 'bad11.stan', line 2, column 2 to column 12:
   -------------------------------------------------
     1:  parameters {
     2:    int theta;
           ^
     3:  }
     4:  model {
   -------------------------------------------------

(Transformed) Parameters cannot be integers.
  $ ../../../../../install/default/bin/stanc bad2.stan
Semantic error in 'bad2.stan', line 1, column 34 to column 42:
   -------------------------------------------------
     1:  data { array[3] real a; } model { a = 2.0; }
                                           ^
   -------------------------------------------------

Cannot assign to global variable 'a' declared in previous blocks.
  $ ../../../../../install/default/bin/stanc bad2.stanfunctions
Syntax error in 'bad2.stanfunctions', line 5, column 0 to column 1, parsing error:
   -------------------------------------------------
     3:  }
     4:  
     5:  }
         ^
   -------------------------------------------------

Only function definitions/declarations are expected in '.stanfunctions' file
  $ ../../../../../install/default/bin/stanc bad3.stan
Syntax error in 'bad3.stan', line 1, column 21 to column 22, parsing error:
   -------------------------------------------------
     1:  data { real a; matrix(2,3) b; } model { a = b; }
                              ^
   -------------------------------------------------

Expected "[" expression "," expression "]" for sizes of matrix.
  $ ../../../../../install/default/bin/stanc bad3.stanfunctions
Syntax error in 'bad3.stanfunctions', line 1, column 0 to column 5, parsing error:
   -------------------------------------------------
     1:  while;
         ^
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../../install/default/bin/stanc bad4.stan
Semantic error in 'bad4.stan', line 1, column 44 to column 48:
   -------------------------------------------------
     1:  data { array[5] real a; } model { for (n in a[1]:5) a[n] = n; }
                                                     ^
   -------------------------------------------------

Lower bound of for-loop must be of type int. Instead found type real.
  $ ../../../../../install/default/bin/stanc bad5.stan
Semantic error in 'bad5.stan', line 3, column 6 to column 10:
   -------------------------------------------------
     1:  transformed data {
     2:    real y;
     3:    y = lp__;
               ^
     4:  }
     5:  model {
   -------------------------------------------------

Identifier 'lp__' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc bad6.stan
Semantic error in 'bad6.stan', line 7, column 3 to column 12:
   -------------------------------------------------
     5:     real z;
     6:     
     7:     y = 10.0;
            ^
     8:  }
     9:  model {
   -------------------------------------------------

Cannot assign to global variable 'y' declared in previous blocks.
  $ ../../../../../install/default/bin/stanc bad7.stan
Semantic error in 'bad7.stan', line 7, column 2 to column 11:
   -------------------------------------------------
     5:    real z;
     6:  
     7:    y = 10.0;
           ^
     8:  }
     9:  model { 
   -------------------------------------------------

Cannot assign to global variable 'y' declared in previous blocks.
  $ ../../../../../install/default/bin/stanc bad8.stan
Semantic error in 'bad8.stan', line 5, column 4 to column 13:
   -------------------------------------------------
     3:  }
     4:  model {
     5:      y = 10.0;
             ^
     6:  }
   -------------------------------------------------

Cannot assign to global variable 'y' declared in previous blocks.
  $ ../../../../../install/default/bin/stanc bad9.stan
Semantic error in 'bad9.stan', line 5, column 3 to column 9:
   -------------------------------------------------
     3:  }
     4:  parameters {
     5:     int N;
            ^
     6:     array[N] real z;
     7:  }
   -------------------------------------------------

(Transformed) Parameters cannot be integers.
  $ ../../../../../install/default/bin/stanc bad_bounds1.stan
Syntax error in 'bad_bounds1.stan', line 2, column 15 to column 17, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real<lower=1 && 2> x;
                        ^
     3:  }
     4:  parameters {
   -------------------------------------------------

">" or ", upper = expression>" (with expression not containing binary logical operators) expected after specifying lower bound for type.
  $ ../../../../../install/default/bin/stanc bad_bounds2.stan
Semantic error in 'bad_bounds2.stan', line 2, column 2 to column 31:
   -------------------------------------------------
     1:  data {
     2:    array[10] complex<lower=1> x;
           ^
     3:  }
     4:  parameters {
   -------------------------------------------------

Complex types do not support transformations.
  $ ../../../../../install/default/bin/stanc bad_bounds3.stan
Semantic error in 'bad_bounds3.stan', line 2, column 1 to column 21:
   -------------------------------------------------
     1:  data {
     2:   complex<offset=1> x;
          ^
     3:  }
     4:  parameters {
   -------------------------------------------------

Complex types do not support transformations.
  $ ../../../../../install/default/bin/stanc bad_bounds4.stan
Semantic error in 'bad_bounds4.stan', line 2, column 2 to column 30:
   -------------------------------------------------
     1:  data {
     2:    complex<lower=1, upper=5> x;
           ^
     3:  }
     4:  parameters {
   -------------------------------------------------

Complex types do not support transformations.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_arr_rvec_data.stan
Semantic error in 'bad_cov_exp_quad_arr_rvec_data.stan', line 13, column 41 to column 48:
   -------------------------------------------------
    11:    matrix[N_2, N_1] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_arr_2, d_vec_1, d_sigma, d_len);
                                                  ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Identifier 'd_arr_2' not in scope. Did you mean 'd_arr_1'?
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_arr_rvec_param.stan
Syntax error in 'bad_cov_exp_quad_arr_rvec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_arr_2, d_vec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_arr_vec_data.stan
Semantic error in 'bad_cov_exp_quad_arr_vec_data.stan', line 13, column 41 to column 48:
   -------------------------------------------------
    11:    matrix[N_2, N_1] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_arr_2, d_vec_1, d_sigma, d_len);
                                                  ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Identifier 'd_arr_2' not in scope. Did you mean 'd_arr_1'?
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_arr_vec_param.stan
Syntax error in 'bad_cov_exp_quad_arr_vec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_params_matrix = cov_exp_quad(d_arr_2, d_vec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_len_data.stan
Semantic error in 'bad_cov_exp_quad_len_data.stan', line 13, column 28 to column 75:
   -------------------------------------------------
    11:    matrix[N_1, N_2] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
                                     ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad':
(array[] vector, array[] vector, real, array[] real)
Available signatures:
(array[] vector, array[] vector, real, real) => matrix
  The fourth argument must be real but got array[] real
(array[] real, array[] real, real, real) => matrix
  The first argument must be array[] real but got array[] vector
(array[] row_vector, array[] row_vector, real, real) => matrix
  The first argument must be array[] row_vector but got array[] vector
(array[] real, real, real) => matrix
  Expected 3 arguments but found 4 arguments.
(array[] vector, real, real) => matrix
  Expected 3 arguments but found 4 arguments.
(Additional signatures omitted)
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_len_param.stan
Syntax error in 'bad_cov_exp_quad_len_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_len_rvec_param.stan
Syntax error in 'bad_cov_exp_quad_len_rvec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_len_vec_param.stan
Syntax error in 'bad_cov_exp_quad_len_vec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_rvec_arr_data.stan
Semantic error in 'bad_cov_exp_quad_rvec_arr_data.stan', line 13, column 50 to column 57:
   -------------------------------------------------
    11:    matrix[N_1, N_2] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_arr_2, d_sigma, d_len);
                                                           ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Identifier 'd_arr_2' not in scope. Did you mean 'd_arr_1'?
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_rvec_arr_param.stan
Syntax error in 'bad_cov_exp_quad_rvec_arr_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_params_matrix = cov_exp_quad(d_vec_1, d_arr_2, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_rvec_data.stan
Semantic error in 'bad_cov_exp_quad_rvec_data.stan', line 12, column 28 to column 65:
   -------------------------------------------------
    10:    matrix[N_2, N_1] transformed_data_matrix;
    11:  
    12:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_sigma, d_len);
                                     ^
    13:  }
    14:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad':
(row_vector, real, real)
Available signatures:
(array[] real, real, real) => matrix
  The first argument must be array[] real but got row_vector
(array[] vector, real, real) => matrix
  The first argument must be array[] vector but got row_vector
(array[] row_vector, real, real) => matrix
  The first argument must be array[] row_vector but got row_vector
(array[] real, array[] real, real, real) => matrix
  Expected 4 arguments but found 3 arguments.
(array[] vector, array[] vector, real, real) => matrix
  Expected 4 arguments but found 3 arguments.
(Additional signatures omitted)
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_rvec_vec_data.stan
Semantic error in 'bad_cov_exp_quad_rvec_vec_data.stan', line 13, column 28 to column 75:
   -------------------------------------------------
    11:    matrix[N_2, N_1] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_rvec_1, d_vec_1, d_sigma, d_len);
                                     ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad':
(array[] row_vector, array[] vector, real, real)
Available signatures:
(array[] row_vector, array[] row_vector, real, real) => matrix
  The second argument must be array[] row_vector but got array[] vector
(array[] real, array[] real, real, real) => matrix
  The first argument must be array[] real but got array[] row_vector
(array[] vector, array[] vector, real, real) => matrix
  The first argument must be array[] vector but got array[] row_vector
(array[] real, real, real) => matrix
  Expected 3 arguments but found 4 arguments.
(array[] vector, real, real) => matrix
  Expected 3 arguments but found 4 arguments.
(Additional signatures omitted)
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_rvec_vec_param.stan
Syntax error in 'bad_cov_exp_quad_rvec_vec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_params_matrix = cov_exp_quad(d_rvec_1, d_vec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_sigma_data.stan
Semantic error in 'bad_cov_exp_quad_sigma_data.stan', line 13, column 28 to column 75:
   -------------------------------------------------
    11:    matrix[N_1, N_2] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
                                     ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad':
(array[] vector, array[] vector, array[] real, real)
Available signatures:
(array[] vector, array[] vector, real, real) => matrix
  The third argument must be real but got array[] real
(array[] real, array[] real, real, real) => matrix
  The first argument must be array[] real but got array[] vector
(array[] row_vector, array[] row_vector, real, real) => matrix
  The first argument must be array[] row_vector but got array[] vector
(array[] real, real, real) => matrix
  Expected 3 arguments but found 4 arguments.
(array[] vector, real, real) => matrix
  Expected 3 arguments but found 4 arguments.
(Additional signatures omitted)
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_sigma_param.stan
Syntax error in 'bad_cov_exp_quad_sigma_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_sigma_rvec_param.stan
Syntax error in 'bad_cov_exp_quad_sigma_rvec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_sigma_vec_param.stan
Syntax error in 'bad_cov_exp_quad_sigma_vec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_vec_arr_data.stan
Semantic error in 'bad_cov_exp_quad_vec_arr_data.stan', line 13, column 50 to column 57:
   -------------------------------------------------
    11:    matrix[N_1, N_2] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_arr_2, d_sigma, d_len);
                                                           ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Identifier 'd_arr_2' not in scope. Did you mean 'd_arr_1'?
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_vec_arr_param.stan
Syntax error in 'bad_cov_exp_quad_vec_arr_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_params_matrix = cov_exp_quad(d_vec_1, d_arr_2, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_vec_data.stan
Semantic error in 'bad_cov_exp_quad_vec_data.stan', line 12, column 28 to column 65:
   -------------------------------------------------
    10:    matrix[N_2, N_1] transformed_data_matrix;
    11:  
    12:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_sigma, d_len);
                                     ^
    13:  }
    14:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad':
(vector, real, real)
Available signatures:
(array[] real, real, real) => matrix
  The first argument must be array[] real but got vector
(array[] vector, real, real) => matrix
  The first argument must be array[] vector but got vector
(array[] row_vector, real, real) => matrix
  The first argument must be array[] row_vector but got vector
(array[] real, array[] real, real, real) => matrix
  Expected 4 arguments but found 3 arguments.
(array[] vector, array[] vector, real, real) => matrix
  Expected 4 arguments but found 3 arguments.
(Additional signatures omitted)
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_vec_rvec_data.stan
Semantic error in 'bad_cov_exp_quad_vec_rvec_data.stan', line 13, column 28 to column 75:
   -------------------------------------------------
    11:    matrix[N_1, N_2] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
                                     ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad':
(array[] vector, array[] row_vector, real, real)
Available signatures:
(array[] vector, array[] vector, real, real) => matrix
  The second argument must be array[] vector but got array[] row_vector
(array[] real, array[] real, real, real) => matrix
  The first argument must be array[] real but got array[] vector
(array[] row_vector, array[] row_vector, real, real) => matrix
  The first argument must be array[] row_vector but got array[] vector
(array[] real, real, real) => matrix
  Expected 3 arguments but found 4 arguments.
(array[] vector, real, real) => matrix
  Expected 3 arguments but found 4 arguments.
(Additional signatures omitted)
  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_vec_rvec_param.stan
Syntax error in 'bad_cov_exp_quad_vec_rvec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_params_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.
  $ ../../../../../install/default/bin/stanc bad_decl1.stan
Syntax error in 'bad_decl1.stan', line 2, column 14 to column 15, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real x, int y;
                       ^
     3:  }
   -------------------------------------------------

Expected identifier. Multiple declarations must have the same type.
  $ ../../../../../install/default/bin/stanc bad_decl2.stan
Syntax error in 'bad_decl2.stan', line 2, column 13 to column 14, parsing error:
   -------------------------------------------------
     1:  data {
     2:    array[3,3] x;
                      ^
     3:  }
   -------------------------------------------------

Expected non-array type after "array" declaration.
  $ ../../../../../install/default/bin/stanc bad_periods_data.stan
Syntax error in 'bad_periods_data.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  data {
     2:    real x.y;
                 ^
     3:  }
     4:  parameters {
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc bad_periods_gqs.stan
Syntax error in 'bad_periods_gqs.stan', line 8, column 7, lexing error:
   -------------------------------------------------
     6:  }
     7:  generated quantities {
     8:    real x.y;
                 ^
     9:    x.y = z * 2;
    10:  }
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc bad_periods_local.stan
Syntax error in 'bad_periods_local.stan', line 5, column 7, lexing error:
   -------------------------------------------------
     3:  }
     4:  model {
     5:    real x.y;
                 ^
     6:    z ~ normal(x.y,1);
     7:  }
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc bad_periods_params.stan
Syntax error in 'bad_periods_params.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  parameters {
     2:    real x.y;
                 ^
     3:  }
     4:  model {
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc bad_periods_tdata.stan
Syntax error in 'bad_periods_tdata.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:    real x.y;
                 ^
     3:  }
     4:  parameters {
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc bad_periods_tparams.stan
Syntax error in 'bad_periods_tparams.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  transformed parameters {
     2:    real x.;
                 ^
     3:    x. = 1.0;
     4:  }
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc bad_promotion1.stan
Semantic error in 'bad_promotion1.stan', line 9, column 2 to column 13:
   -------------------------------------------------
     7:  model {
     8:    array[3] int d = {1,2,3};
     9:    printer(d);
           ^
    10:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'printer':
(array[] int)
Available signatures:
(array[] vector) => void
  The first argument must be array[] vector but got array[] int
  $ ../../../../../install/default/bin/stanc bad_promotions2.stan
Semantic error in 'bad_promotions2.stan', line 9, column 8 to column 17:
   -------------------------------------------------
     7:  model {
     8:    array[3] int d = {1,2,3};
     9:    print(nested(d));
                 ^
    10:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'nested':
(array[] int)
Available signatures:
(array[,] complex) => real
  The first argument must be array[,] complex but got array[] int
  $ ../../../../../install/default/bin/stanc bad_promotions3.stan
Semantic error in 'bad_promotions3.stan', line 9, column 2 to column 17:
   -------------------------------------------------
     7:  model {
     8:    array[3] int d = {1,2,3};
     9:    printer({d,d});
           ^
    10:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'printer':
(array[,] int)
Available signatures:
(array[] real) => void
  The first argument must be array[] real but got array[,] int
  $ ../../../../../install/default/bin/stanc bad_promotions4.stan
Semantic error in 'bad_promotions4.stan', line 9, column 2 to column 13:
   -------------------------------------------------
     7:  model {
     8:    array[3] real d = {1,2.2,3};
     9:    printer(d);
           ^
    10:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'printer':
(array[] real)
Available signatures:
(array[] int) => void
  The first argument must be array[] int but got array[] real
  $ ../../../../../install/default/bin/stanc good_all.stan
Semantic error in 'good_all.stan', line 25, column 2 to column 8:
   -------------------------------------------------
    23:  
    24:  model {
    25:    m = m;
           ^
    26:    rv = m[1];
    27:    s = m[1,2];
   -------------------------------------------------

Cannot assign to global variable 'm' declared in previous blocks.
  $ ../../../../../install/default/bin/stanc incomplete.stan
Syntax error in 'incomplete.stan', line 2, column 18 to column 19, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    real x = 2.0 .^ ;
                           ^
     3:  }
   -------------------------------------------------

Found an incomplete binary expression - are you missing the right hand side?
  $ ../../../../../install/default/bin/stanc incomplete2.stan
Syntax error in 'incomplete2.stan', line 2, column 15 to column 20, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    1.0 .^ foo[] while
                        ^
     3:  }
   -------------------------------------------------

Found a expression where we expected a statement. Is there a missing semi-colon here?
Or did you mean to use the preceding expression in:
* a function call
* a sampling statement
* the conditional in a for, while, or if statement
* assignment to a variable?
  $ ../../../../../install/default/bin/stanc incomplete3.stan
Syntax error in 'incomplete3.stan', line 2, column 10 to column 15, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    2.0 %/% while (1) { print("hi"); }
                   ^
     3:  }
   -------------------------------------------------

Ill-formed expression. Expected expression after expression followed by "%/%".
  $ ../../../../../install/default/bin/stanc incomplete4.stan
Syntax error in 'incomplete4.stan', line 2, column 13 to column 14, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    2.0 %/% 1.0; while (1) { print("hi"); }
                      ^
     3:  }
   -------------------------------------------------

Found a expression where we expected a statement. Is there a missing semi-colon here?
Or did you mean to use the preceding expression in:
* a function call
* a sampling statement
* the conditional in a for, while, or if statement
* assignment to a variable?
  $ ../../../../../install/default/bin/stanc incomplete5.stan
Syntax error in 'incomplete5.stan', line 3, column 0 to column 0, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    if (2.0) ;
         ^
   -------------------------------------------------

Ill-formed block. Expected a statement, variable declaration, or just "}".
  $ ../../../../../install/default/bin/stanc incomplete6.stan
Syntax error in 'incomplete6.stan', line 3, column 16 to column 21, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    print(foo[2.0]);
     3:    real x = sars[while (0)];
                         ^
     4:  }
   -------------------------------------------------

Expected an expression inside "[" and "]" but found a statement. Indexing should look like
  var[1 + i]
not
  var[for (n in 1:N) ...]
  $ ../../../../../install/default/bin/stanc reused_name.stan
Semantic error in 'reused_name.stan', line 4, column 14 to column 15:
   -------------------------------------------------
     2:      vector[3] e;
     3:      // e is selected because it is also a Stan-math function 'e()'
     4:      vector[3] e;
                       ^
     5:  }
   -------------------------------------------------

Identifier 'e' is already in use.
  $ ../../../../../install/default/bin/stanc unterminated_comment.stan
Syntax error in 'unterminated_comment.stan', line 4, column -1, lexing error:
   -------------------------------------------------
     2:  never
     3:  ends
         ^
   -------------------------------------------------

Unexpected end of input
